--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -6,8 +6,8 @@ boto3-stubs[dynamodb,sqs]
 build
 dynamic-function-loader
 gql[aiohttp,requests]>=3.0.0
-httpx==0.22.*
-httpx-auth
+httpx==0.23.*
+httpx-auth==0.15.*
 pycognito
 simplejson
 virtualenv
