--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = echostream-node
 author = EchoStream
 author_email = pypi@echo.stream
-version = 0.3.0
+version = 0.3.1
 description = EchoStream library for implementing remote nodes
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -15,8 +15,8 @@ install_requires =
     awsserviceendpoints
     dynamic-function-loader
     gql[aiohttp,requests]>=3.0.0
-    httpx==0.22.*
-    httpx-auth
+    httpx==0.23.*
+    httpx-auth==0.15.*
     pycognito
     simplejson
 python_requires = >=3.9
